# wimg

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  build-wasi-sdk.sh  build.rs  test.mjs  wimg.h
.cargo/: clang_aarch64_linux_musl  clang_x86_64_linux_musl  config.toml
cli/: .gitignore  Cargo.toml  Dockerfile  Makefile  entrypoint.sh
cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/jpeg_decode/: Cargo.toml
crates/jpeg_decode/src/: lib.rs
crates/jpeg_encode/: Cargo.toml
crates/jpeg_encode/src/: lib.rs
crates/resize/: Cargo.toml
crates/resize/src/: lib.rs
functions/images/: [[path]].ts
jpeg/: Cargo.toml  build.rs
jpeg/src/: lib.rs  wrapper.c  wrapper.cc
public/: index.html
src/: avif.rs  crop.rs  error.rs  ffi.rs  hash.rs  jpeg.rs  lib.rs  png.rs  resize.rs  webp.rs
wasi/: example.ts  package-lock.json  package.json  wasi.ts
wasm/: wimg_jpeg_decode.wasm  wimg_jpeg_encode.wasm  wimg_resize.wasm
wimg/: .gitignore  example.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  wimg.ts
worker/: build.sh  package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: wasm.d.ts  worker.ts
