[package]
name = "wimg"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [
  "rlib",
  "cdylib",
  "staticlib",
] # needs to be staticlib when building for e.g. Go

[workspace]
members = ["cli", "jpeg"]

# optimize for small code size
[profile.release]
opt-level = "s"
lto = true

[dependencies]
jpeg = { path = "./jpeg" }
libwebp-sys2 = { version = "0.1", features = ["1_2", "static"] }
png = "0.17"
ravif = "0.11"
resize = "0.8"
rgb = "0.8"
thiserror = "1.0"
xxhash-rust = { version = "0.8", features = ["const_xxh64"] }

[build-dependencies]
cbindgen = "0.26"

[features]
default = []
ffi = []
