[package]
name = "wimg-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
log = "0.4"
pretty_env_logger = "0.5"
rayon = { version = "1.5", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wimg = { path = "../" }

[features]
default = ["parallel"]
parallel = ["rayon"]
